change routes, change updateUserInfo (oldPassword, newPassword), addition swagger.json
