# routes/api/auth-router.js
@@ -1,6 +1,6 @@
 import express from 'express';
 import authController from "../../controllers/auth-controller.js";
-import { isEmptyBody, userValidateSignup, userValidateSignin, authenticate,  upload, userValidateWaterRate, userValidateAll, userValidateEmail } from '../../middlewares/index.js';
+import { isEmptyBody, userValidateSignup, userValidateSignin, authenticate, userValidateEmail } from '../../middlewares/index.js';
 
 const authRouter = express.Router();
 
@@ -9,14 +9,6 @@ authRouter.post("/signup", isEmptyBody, userValidateSignup, authController.signu
 authRouter.post("/signin", isEmptyBody, userValidateSignin, authController.signin)
 
 authRouter.post("/logout", authenticate, authController.signout);
-
-authRouter.get("/current", authenticate, authController.getCurrent);
-
-authRouter.patch("/", authenticate, isEmptyBody, userValidateAll, authController.updateUserInfo);
-
-authRouter.patch("/water-rate", authenticate, isEmptyBody, userValidateWaterRate, authController.updateWaterRateUser);
-
-authRouter.patch("/avatars", authenticate, upload.single("avatar"), authController.updateAvatarUser);
 
 authRouter.post("/reset-password", userValidateEmail, authController.resetPassword);
 
